<?xml version="1.0"?>
<package format="2">
    <name>pa_slam</name>
    <version>0.0.0</version>
    <description>
        The pa_slam package. It is a LiDAR based SLAM algorithm developped at Polytech Angers. It was implemented by Remy Guyonneau on the work of Philippe Lucidarme and Sebastien Lagrange.
    </description>

    <maintainer email="remy.guyonneau@univ-angers.fr">Remy</maintainer>

    <license>LGPLv3</license>

    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>tf</depend>

    <buildtool_depend>catkin</buildtool_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
    </export>
</package>
